# pdfspine

./: .gitignore  CHANGELOG.md  COMPAT.toml  Cargo.toml  LICENSE  LICENSE-BINARY.md  NOTICE  PARITY.md  PRD.md  README.md  THIRD-PARTY-NOTICES.md  deny.toml  llms.txt  mkdocs.yml  pyproject.toml
.cargo/: config.toml
compat/: compat-baseline.txt
conformance/: BENCH.md  REPORT.md  bench.py  diag.py  fetch_corpus.py  oracle_extract.py  (+3 more)
crates/pdf-api/: Cargo.toml
crates/pdf-api/src/: error.rs  image.rs  image_table.rs  lib.rs  markdown.rs  ocr.rs  svg.rs  tables.rs  text.rs
crates/pdf-api/tests/: document_unit.rs  inventory_unit.rs  longtail1_unit.rs  m7_facade.rs  markdown_facade.rs  textpage_reuse.rs
crates/pdf-core/: Cargo.toml
crates/pdf-core/src/: changeset.rs  colorspace.rs  document.rs  encrypt.rs  error.rs  gc.rs  interner.rs  lexer.rs  lib.rs  limits.rs  objstm.rs  ocg.rs  page.rs  pagetree.rs  repair.rs  serialize.rs  source.rs  writer.rs
crates/pdf-core/src/filters/: ascii85.rs  ascii_hex.rs  flate.rs  lzw.rs  mod.rs  predictor.rs  run_length.rs
crates/pdf-core/src/geom/: irect.rs  matrix.rs  mod.rs  paper.rs  point.rs  quad.rs  rect.rs
crates/pdf-core/src/object/: mod.rs  name.rs  parse.rs  stream.rs  string.rs
crates/pdf-core/src/xref/: mod.rs  stream.rs  table.rs
crates/pdf-core/tests/: ascii_unit.rs  changeset_unit.rs  crypt_write_e2e.rs  dispatch_unit.rs  document_property.rs  document_unit.rs  encryption_unit.rs  filters_property.rs  flate_unit.rs  gc_e2e.rs  geom_property.rs  geom_unit.rs  incremental_e2e.rs  interner_unit.rs  lexer_unit.rs  limits_unit.rs  lzw_unit.rs  object_unit.rs  objmodel_accessor_unit.rs  objmodel_property.rs  objstm_unit.rs  ocg_unit.rs  pagetree_unit.rs  predictor_unit.rs  repair_property.rs  repair_unit.rs  runlength_unit.rs  save_e2e.rs  serialize_unit.rs  source_unit.rs  writer_unit.rs  xref_unit.rs  xrefstm_edge_unit.rs
crates/pdf-core/tests/common/: mod.rs
crates/pdf-crypto/: Cargo.toml
crates/pdf-crypto/src/: authoring.rs  error.rs  handler.rs  kdf.rs  lib.rs  primitives.rs  testsupport.rs
crates/pdf-crypto/tests/: auth_unit.rs  authoring_unit.rs  crypto_property.rs  error_unit.rs  kdf_unit.rs  perobj_unit.rs  roundtrip_unit.rs
crates/pdf-edit/: Cargo.toml
crates/pdf-edit/src/: annot.rs  catalog.rs  color.rs  content.rs  dest.rs  drawing.rs  drawings.rs  embfile.rs  fontfile.rs  form.rs  image.rs  lib.rs  links.rs  merge.rs  metadata.rs  ocg.rs  page_content.rs  page_ops.rs  pagelabel.rs  redact.rs  scrub.rs  subset.rs  text.rs  toc.rs
crates/pdf-edit/tests/: annot_e2e.rs  draw_e2e.rs  drawings_e2e.rs  embfile_e2e.rs  flatten_e2e.rs  fontfile_subset.rs  form_e2e.rs  insert_image_e2e.rs  insert_qpdf_check.rs  insert_text_e2e.rs  links_e2e.rs  merge_e2e.rs  metadata_e2e.rs  nameddest_e2e.rs  ocg_e2e.rs  page_ops_e2e.rs  pagelabel_e2e.rs  redact_e2e.rs  scrub_e2e.rs  testfont_selfcheck.rs  toc_e2e.rs
crates/pdf-edit/tests/common/: mod.rs  testfont.rs
crates/pdf-fonts/: Cargo.toml
crates/pdf-fonts/data/: NOTICE  PROVENANCE.md
crates/pdf-fonts/fonts/liberation/: NOTICE  PROVENANCE.md
crates/pdf-fonts/fonts/symbols/: NOTICE  PROVENANCE.md
crates/pdf-fonts/src/: cmap.rs  encodings.rs  font.rs  glyphlist.rs  lib.rs  liberation.rs  mapper.rs  predefined.rs  std_widths.rs  widths.rs
crates/pdf-fonts/tests/: cjk_cmaps.rs  cmap_unit.rs  encoding_unit.rs  fontmap_property.rs  mapper_unit.rs  std_widths_unit.rs  widths_core14.rs
crates/pdf-fonts/tests/common/: mod.rs
crates/pdf-image/: ARCHITECTURE.md  Cargo.toml
crates/pdf-image/src/: error.rs  getpixmap.rs  imagedoc.rs  lib.rs  pixmap.rs
crates/pdf-image/src/codecs/: ccitt.rs  dct.rs  jbig2.rs  jpx.rs  mod.rs
crates/pdf-image/tests/: ccitt.rs  codec_property.rs  dct.rs  dispatch.rs  getpixmap.rs  image_profile.rs  imagedoc.rs  jbig2.rs  jpx.rs  pixmap.rs
crates/pdf-image/tests/assets/: gray.jp2  rgb.jp2
crates/pdf-image/tests/codec_common/: mod.rs
crates/pdf-markdown/: Cargo.toml
crates/pdf-markdown/src/: fonts.rs  images.rs  layout.rs  lib.rs  model.rs  render.rs
crates/pdf-markdown/tests/: blocks.rs  codeblock.rs  determinism.rs  fonts_embed.rs  images_embed.rs  lists.rs  pagination.rs  smoke.rs  table.rs
crates/pdf-markdown/tests/common/: mod.rs
crates/pdf-ocr/: Cargo.toml
crates/pdf-ocr/models/: PROVENANCE.md
crates/pdf-ocr/src/: engine.rs  error.rs  integration.rs  lib.rs  tesseract.rs
crates/pdf-ocr/src/paddle/: classify.rs  detect.rs  mod.rs  model.rs  preprocess.rs  recognize.rs
crates/pdf-ocr/tests/: ocr.rs  paddle.rs  paddle_prof.rs
crates/pdf-ocr/tests/fixtures/: README.md  ocr_sample_ref.json
crates/pdf-render/: ARCHITECTURE.md  Cargo.toml
crates/pdf-render/benches/: render.rs
crates/pdf-render/src/: canvas.rs  error.rs  image.rs  lib.rs  render.rs  svg.rs  text.rs  type1.rs  vector.rs
crates/pdf-render/tests/: render_image.rs  render_image_prop.rs  render_page.rs  render_shade.rs  render_text.rs  render_type3.rs  render_vector.rs  render_vector_prop.rs  svg.rs
crates/pdf-render/tests/synth/: mod.rs
crates/pdf-testdata/: Cargo.toml
crates/pdf-testdata/src/: lib.rs
crates/pdf-text/: Cargo.toml
crates/pdf-text/benches/: textpage.rs
crates/pdf-text/src/: interp.rs  layout.rs  lib.rs  model.rs  renderops.rs  search.rs  serialize.rs  state.rs  tables.rs  texttrace.rs  tokenizer.rs  words.rs
crates/pdf-text/tests/: interp_e2e.rs  interp_property.rs  interp_unit.rs  layout_e2e.rs  layout_property.rs  layout_unit.rs  layout_words.rs  reading_order_round1.rs  search_unit.rs  serialize_golden.rs  serialize_property.rs  serialize_unit.rs  tables_html.rs  tables_lines.rs  tables_none.rs  tables_regression.rs  tables_text.rs
crates/pdf-text/tests/common/: mod.rs
crates/pdf-typeset/: Cargo.toml
crates/pdf-typeset/src/: fontres.rs  lib.rs  model.rs  ops.rs  warn.rs
crates/pdf-typeset/tests/: fontres.rs  model.rs  system_fonts.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_geom.rs  fuzz_open.rs  fuzz_repair.rs
(+162 files in other folders)
