[workspace]
resolver = "2"
members = [
    "crates/pdf-core",
    "crates/pdf-crypto",
    "crates/pdf-fonts",
    "crates/pdf-text",
    "crates/pdf-edit",
    "crates/pdf-image",
    "crates/pdf-render",
    "crates/pdf-api",
    "crates/py-bindings",
    "crates/pdf-testdata",
]
# NOTE: `fuzz/` is intentionally excluded from the workspace. cargo-fuzz crates
# depend on `libfuzzer-sys`, require the nightly toolchain, and use a private
# target dir; folding them into the stable workspace would break `cargo build`
# / `cargo test --workspace` on the pinned stable toolchain (1.96.0). The
# scaffold lives in `fuzz/` and is driven by `cargo +nightly fuzz` (M1+).
exclude = ["fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/oxipdf/oxipdf"
authors = ["oxipdf contributors"]
rust-version = "1.96"

[workspace.dependencies]
# --- shared first-party crates ---
pdf-core = { path = "crates/pdf-core", version = "0.0.0" }
pdf-crypto = { path = "crates/pdf-crypto", version = "0.0.0" }
pdf-fonts = { path = "crates/pdf-fonts", version = "0.0.0" }
pdf-text = { path = "crates/pdf-text", version = "0.0.0" }
pdf-edit = { path = "crates/pdf-edit", version = "0.0.0" }
pdf-image = { path = "crates/pdf-image", version = "0.0.0" }
pdf-render = { path = "crates/pdf-render", version = "0.0.0" }
pdf-api = { path = "crates/pdf-api", version = "0.0.0" }

# --- shared third-party deps (versions per PRD §11.1) ---
thiserror = "2"
pyo3 = "0.29"
bytes = "1"
# Pure-Rust DEFLATE (no system zlib): `rust_backend` selects the miniz_oxide
# backend so the build stays self-contained / cross-platform (PRD §8.3).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust LZW (PDF/TIFF variants) for LZWDecode (PRD §8.3).
weezl = "0.2"
# Small-string optimization for glyph→Unicode results in pdf-fonts (most
# mappings are 1 char; ligatures are 2–3). Pure-Rust, MIT/Apache-2.0.
smol_str = "0.3"
# Unicode NFC/NFD normalization for case/accent-insensitive search compare in
# pdf-text (PRD §8.6). Pure-Rust, MIT/Apache-2.0.
unicode-normalization = "0.1"
# Pure-Rust TrueType/OpenType reader for font embedding (PRD §8.5 / §8.5.2):
# reads `hmtx` widths + `cmap` glyph mapping so `insert_text` with a user TTF can
# emit a CIDFontType2/Type0 with correct `/W` + ToUnicode. `#![forbid(unsafe)]`,
# no_std-capable, MIT/Apache-2.0. Only the metric/cmap features are needed.
ttf-parser = { version = "0.25", default-features = false, features = ["std", "glyph-names"] }
# --- pdf-crypto: RustCrypto (all MIT/Apache-2.0, pure-Rust) — PRD §6.4 / §8.4 ---
# Stable 0.8/0.10/0.4 generation pinned for toolchain 1.96. RC4 is hand-rolled
# in pdf-crypto (the `rc4` crate cannot take a runtime-length key, which PDF
# requires — 5..=16 bytes); AES/CBC/hashes are RustCrypto.
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
md-5 = "0.10"
cipher = { version = "0.4", features = ["block-padding"] }
# Pure-Rust CSPRNG source for encryption-on-write salts/IVs (PRD §8.4). OS
# entropy on every target, no C deps; keeps the wheel pure-Rust / WASM-clean.
getrandom = "0.2"

# --- pdf-image: image-document decode + image-XObject codecs (M5, PRD §8.10 /
# §11.1). All MIT/Apache/BSD/Zlib (no GPL/AGPL/LGPL/MPL/IJG in the shipped
# graph); versions verified to resolve on crates.io against toolchain 1.96.
#
# `image` is the decode/encode hub for image-document inputs (PNG/JPEG/TIFF/
# GIF/BMP/WEBP, PRD §8.10). Default features are off and only the needed format
# codecs are enabled to keep the footprint tight; this still pulls the pure-Rust
# `png`/`tiff`/`gif`/`image-webp` leaves transitively, so we do not depend on
# `png`/`tiff` directly. MIT/Apache-2.0.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "gif", "bmp", "webp"] }
# DCTDecode (JPEG) decode for image XObjects (PRD §8.4 / §11.1). `zune-jpeg` is
# the primary fast pure-Rust decoder; `jpeg-decoder` is the cross-check oracle.
# MIT/Apache(/Zlib).
zune-jpeg = "0.5"
jpeg-decoder = "0.3"
# CCITTFaxDecode G3/G4 (PRD §8.4). `fax` (MIT) is the primary pure-Rust codec
# (decode + encode for save-transcode); `hayro-ccitt` (Apache-2.0 OR MIT) is the
# alternate/cross-check decoder. Both verified on crates.io.
fax = "0.2"
hayro-ccitt = "0.3"
# JBIG2Decode (PRD §8.4.1 documented subset). `hayro-jbig2` exists on crates.io
# (0.3.0, Apache-2.0 OR MIT) — confirmed, not a gap. Pre-1.0 / untrusted: the
# degradation contract (§8.4.1) wraps every decode in a typed error path.
hayro-jbig2 = "0.3"
# JPXDecode / JPEG2000 (PRD §8.4.1 documented subset). `hayro-jpeg2000` exists on
# crates.io (0.4.0, Apache-2.0 OR MIT) — confirmed, not a gap. Same degradation
# contract; the optional OpenJPEG (C) fallback is deliberately NOT wired here.
hayro-jpeg2000 = "0.4"

# --- shared dev-deps ---
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
