[workspace]
resolver = "2"
members = [
    "crates/pdf-core",
    "crates/pdf-crypto",
    "crates/pdf-fonts",
    "crates/pdf-text",
    "crates/pdf-edit",
    "crates/pdf-image",
    "crates/pdf-render",
    "crates/pdf-ocr",
    "crates/pdf-api",
    "crates/py-bindings",
    "crates/pdf-testdata",
]
# NOTE: `fuzz/` is intentionally excluded from the workspace. cargo-fuzz crates
# depend on `libfuzzer-sys`, require the nightly toolchain, and use a private
# target dir; folding them into the stable workspace would break `cargo build`
# / `cargo test --workspace` on the pinned stable toolchain (1.96.0). The
# scaffold lives in `fuzz/` and is driven by `cargo +nightly fuzz` (M1+).
exclude = ["fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pdfspine/pdfspine"
authors = ["pdfspine contributors"]
rust-version = "1.96"

[workspace.dependencies]
# --- shared first-party crates ---
pdf-core = { path = "crates/pdf-core", version = "0.0.0" }
pdf-crypto = { path = "crates/pdf-crypto", version = "0.0.0" }
pdf-fonts = { path = "crates/pdf-fonts", version = "0.0.0" }
pdf-text = { path = "crates/pdf-text", version = "0.0.0" }
pdf-edit = { path = "crates/pdf-edit", version = "0.0.0" }
pdf-image = { path = "crates/pdf-image", version = "0.0.0" }
pdf-render = { path = "crates/pdf-render", version = "0.0.0" }
# `default-features = false` here so pdf-api's own (default-on) `paddle-ocr`
# feature is the single switch for the PaddleOCR engine (pdf-api re-enables it);
# building pdf-api with `--no-default-features` then truly compiles paddle out.
pdf-ocr = { path = "crates/pdf-ocr", version = "0.0.0", default-features = false }
pdf-api = { path = "crates/pdf-api", version = "0.0.0" }

# --- shared third-party deps (versions per PRD §11.1) ---
thiserror = "2"
pyo3 = "0.29"
bytes = "1"
# Pure-Rust DEFLATE (no system zlib): `rust_backend` selects the miniz_oxide
# backend so the build stays self-contained / cross-platform (PRD §8.3).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust LZW (PDF/TIFF variants) for LZWDecode (PRD §8.3).
weezl = "0.2"
# Small-string optimization for glyph→Unicode results in pdf-fonts (most
# mappings are 1 char; ligatures are 2–3). Pure-Rust, MIT/Apache-2.0.
smol_str = "0.3"
# Unicode NFC/NFD normalization for case/accent-insensitive search compare in
# pdf-text (PRD §8.6). Pure-Rust, MIT/Apache-2.0.
unicode-normalization = "0.1"
# Pure-Rust TrueType/OpenType reader for font embedding (PRD §8.5 / §8.5.2):
# reads `hmtx` widths + `cmap` glyph mapping so `insert_text` with a user TTF can
# emit a CIDFontType2/Type0 with correct `/W` + ToUnicode. `#![forbid(unsafe)]`,
# no_std-capable, MIT/Apache-2.0. Only the metric/cmap features are needed.
ttf-parser = { version = "0.25", default-features = false, features = ["std", "glyph-names"] }
# --- pdf-crypto: RustCrypto (all MIT/Apache-2.0, pure-Rust) — PRD §6.4 / §8.4 ---
# Stable 0.8/0.10/0.4 generation pinned for toolchain 1.96. RC4 is hand-rolled
# in pdf-crypto (the `rc4` crate cannot take a runtime-length key, which PDF
# requires — 5..=16 bytes); AES/CBC/hashes are RustCrypto.
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
md-5 = "0.10"
cipher = { version = "0.4", features = ["block-padding"] }
# Pure-Rust CSPRNG source for encryption-on-write salts/IVs (PRD §8.4). OS
# entropy on every target, no C deps; keeps the wheel pure-Rust / WASM-clean.
getrandom = "0.2"

# --- pdf-image: image-document decode + image-XObject codecs (M5, PRD §8.10 /
# §11.1). All MIT/Apache/BSD/Zlib (no GPL/AGPL/LGPL/MPL/IJG in the shipped
# graph); versions verified to resolve on crates.io against toolchain 1.96.
#
# `image` is the decode/encode hub for image-document inputs (PNG/JPEG/TIFF/
# GIF/BMP/WEBP, PRD §8.10). Default features are off and only the needed format
# codecs are enabled to keep the footprint tight; this still pulls the pure-Rust
# `png`/`tiff`/`gif`/`image-webp` leaves transitively, so we do not depend on
# `png`/`tiff` directly. MIT/Apache-2.0.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "gif", "bmp", "webp"] }
# DCTDecode (JPEG) decode for image XObjects (PRD §8.4 / §11.1). `zune-jpeg` is
# the primary fast pure-Rust decoder; `jpeg-decoder` is the cross-check oracle.
# MIT/Apache(/Zlib).
zune-jpeg = "0.5"
jpeg-decoder = "0.3"
# CCITTFaxDecode G3/G4 (PRD §8.4). `fax` (MIT) is the primary pure-Rust codec
# (decode + encode for save-transcode); `hayro-ccitt` (Apache-2.0 OR MIT) is the
# alternate/cross-check decoder. Both verified on crates.io.
fax = "0.2"
hayro-ccitt = "0.3"
# JBIG2Decode (PRD §8.4.1 documented subset). `hayro-jbig2` exists on crates.io
# (0.3.0, Apache-2.0 OR MIT) — confirmed, not a gap. Pre-1.0 / untrusted: the
# degradation contract (§8.4.1) wraps every decode in a typed error path.
hayro-jbig2 = "0.3"
# JPXDecode / JPEG2000 (PRD §8.4.1 documented subset). `hayro-jpeg2000` exists on
# crates.io (0.4.0, Apache-2.0 OR MIT) — confirmed, not a gap. Same degradation
# contract; the optional OpenJPEG (C) fallback is deliberately NOT wired here.
hayro-jpeg2000 = "0.4"

# --- pdf-render: anti-aliased 2D path rasterizer (M6, PRD §8.11 / §11.1).
#
# `tiny-skia` is the leaf rasterization primitive: it fills/strokes/clips paths
# with anti-aliasing, supports blend modes and gradients, and is the mature
# pure-Rust port of Skia's raster pipeline (BSD-3-Clause). All the PDF→drawcall
# intelligence (content interpretation, CTM, colorspaces, glyph outline
# extraction) stays first-party in `pdf-render`; tiny-skia only paints the
# resulting paths into a pixel buffer. Chosen over `raqote` (less maintained) and
# `zeno` (rasterizer-only — no pixmap/clip/blend surface).
#
# `default-features = false` with only `std` + `simd` deliberately DROPS the
# `png-format` feature, which would otherwise pull `png`→`flate2`/`miniz_oxide`
# into the graph (a second `flate2` next to our pinned `rust_backend` one, and a
# redundant PNG encoder — we already encode via `pdf_image::Pixmap::save_png`).
# The remaining graph is all BSD/MIT/Apache/Zlib leaves (`tiny-skia-path`,
# `arrayref`, `arrayvec`, `bytemuck` [shared with `image`], `cfg-if`, `log`,
# `strict-num`); verified to resolve on crates.io against toolchain 1.96.
#
# Glyph rendering reuses the existing `ttf-parser` `OutlineBuilder` (outlines fed
# straight into a tiny-skia `PathBuilder`), so NO separate glyph-raster crate
# (`swash`/`fontdue`/`ab_glyph`) is needed — minimizing deps per the policy.
# Color management (`moxcms` ICC) is intentionally deferred: naive CMYK→RGB is
# acceptable for the M6 scaffold and first rendering pass (PRD §8.11).
tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }

# --- pdf-ocr: pure-Rust PaddleOCR (PP-OCRv4) engine (M8+, `paddle-ocr` feature).
#
# `tract-onnx` is Sonos' pure-Rust ONNX inference engine (Apache-2.0 OR MIT, no
# C/C++, no `ort`/onnxruntime). It loads + optimizes the shipped PP-OCRv4 det/rec
# and PP-OCRv2 cls models and runs them on CPU. Pinned to 0.21 (the 0.21 line
# resolves cleanly on toolchain 1.96 and exposes the stable
# `onnx().model_for_read(..).with_input_fact(..).into_optimized().into_runnable()`
# API used here). `image` (already pinned above) provides the pure-Rust resize
# used for det/cls/rec preprocessing; the small morphology/connected-components
# in detection are hand-rolled to avoid the heavy `imageproc`/`nalgebra` graph.
tract-onnx = "0.21"

# --- shared dev-deps ---
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
