[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "pdfspine"
# The version is taken from the Rust workspace (Cargo.toml [workspace.package])
# at build time via maturin's `dynamic` metadata ŌĆö that crate version is the
# single source of truth. Local/dev builds show 0.0.0; tagged CI builds set it
# from the git tag (see .github/workflows/release.yml).
dynamic = ["version"]
description = "Apache-2.0-licensed, pure-Rust reimplementation of PyMuPDF (fitz) with PyO3 bindings."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "pdfspine contributors" }]
keywords = ["pdf", "pymupdf", "fitz", "mupdf", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # NB: no "License ::" trove classifier ŌĆö the SPDX `license = "Apache-2.0"`
    # expression (PEP 639) is the single source of truth; having both is rejected
    # by recent setuptools/twine (metadata 2.4 license-expression conflict).
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.urls]
Homepage = "https://github.com/VoldemortGin/pdfspine"
Repository = "https://github.com/VoldemortGin/pdfspine"
Issues = "https://github.com/VoldemortGin/pdfspine/issues"

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6"]
# Build the documentation site (`mkdocs build`). mkdocstrings introspects the
# INSTALLED `pdfspine`, so the reference auto-renders from docstrings ŌĆö install
# this extra into an env that also has pdfspine (e.g. the project .venv).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "ruff>=0.6",  # mkdocstrings auto-uses it to wrap long signatures
]
# Opt-in OCR (P0-5r / Option A). There is ONE published `pdfspine` wheel and it
# already CONTAINS the pure-Rust PaddleOCR engine (compiled in via the maturin
# `ocr` feature above) ŌĆö but NOT the ~16 MB PP-OCRv4 ONNX models, which are never
# embedded. The models ship as a SEPARATE pure-data distribution,
# `pdfspine-ocr-models` (import package `pdfspine_ocr_models`), and this extra is
# what pulls it in: `pip install pdfspine[ocr]` ŌćÆ models present ŌćÆ OCR works fully
# offline. A bare `pip install pdfspine` has the OCR code but no models.
#
# Runtime model resolution order (see `python/pdfspine/document.py`
# `_ensure_ocr_models_env` and the Rust `models_dir()` in
# `crates/pdf-ocr/src/paddle/model.rs`):
#   1. `PDFSPINE_OCR_MODELS` env var, if already set (explicit user override);
#   2. else the installed `pdfspine_ocr_models` companion (this extra);
#   3. else the in-repo `crates/pdf-ocr/models` dev fallback (source checkout);
#   4. else a clear `PdfUnsupportedError` pointing at `pip install pdfspine[ocr]`.
ocr = ["pdfspine-ocr-models"]

[project.scripts]
pdfspine = "pdfspine.cli:main"

[tool.maturin]
# The Rust crate that builds the extension module.
manifest-path = "crates/py-bindings/Cargo.toml"
# Place the compiled `_core` inside the `pdfspine` package.
module-name = "pdfspine._core"
# Pure-Python sources live here. The pdfspine package ships the native API plus
# the opt-in `pdfspine.fitz` / `pdfspine.pymupdf` compatibility submodules; the
# top-level `fitz` / `pymupdf` names are claimed only via `install_fitz_shim()`.
python-source = "python"
# abi3 wheel covering CPython >= 3.11 (PRD ┬¦9.4 / ┬¦11.2). The 3.11 floor is
# required by `Pixmap`'s zero-copy buffer protocol ŌĆö the `bf_getbuffer` /
# `bf_releasebuffer` stable-ABI slots were added in CPython 3.11.
#
# `ocr` (the py-bindings crate's feature) compiles the pure-Rust PaddleOCR engine
# INTO the published wheel (P0-5r / Option A). The ~16 MB ONNX models are NOT
# embedded ŌĆö they ship as the separate `pdfspine-ocr-models` data distribution
# that the `[ocr]` extra pulls in, and are resolved at runtime (see the `ocr`
# extra below). `cargo build` / `cargo test` stay lean (paddle-ocr is OFF in the
# workspace default); ONLY maturin (this line) turns OCR on for the wheel.
features = ["pyo3/abi3-py311", "ocr"]
# Ship PEP 561 type information (.pyi stubs + py.typed markers) in sdist + wheel.
# µĀ╣ LICENSE õ╣¤µśŠÕ╝Åń║│Õģź:ÕģāµĢ░µŹ«ÕŻ░µśÄ License-File: LICENSE,PyPI Ķ”üµ▒éÕ«āÕ«×ķÖģÕŁśÕ£©õ║ÄÕłåÕÅæÕīģÕåģ,
# ÕÉ”ÕłÖ sdist õĖŖõ╝ĀµŖź 400(maturin ķ╗śĶ«żõĖŹµŖŖµĀ╣ LICENSE µēōĶ┐ø sdist)ŃĆé
include = [
    "LICENSE",
    "NOTICE",
    "python/pdfspine/py.typed",
    "python/pdfspine/*.pyi",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
