[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "pdfspine"
# The version is taken from the Rust workspace (Cargo.toml [workspace.package])
# at build time via maturin's `dynamic` metadata — that crate version is the
# single source of truth. Local/dev builds show 0.0.0; tagged CI builds set it
# from the git tag (see .github/workflows/release.yml).
dynamic = ["version"]
description = "Apache-2.0-licensed, pure-Rust reimplementation of PyMuPDF (fitz) with PyO3 bindings."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "pdfspine contributors" }]
keywords = ["pdf", "pymupdf", "fitz", "mupdf", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # NB: no "License ::" trove classifier — the SPDX `license = "Apache-2.0"`
    # expression (PEP 639) is the single source of truth; having both is rejected
    # by recent setuptools/twine (metadata 2.4 license-expression conflict).
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.urls]
Homepage = "https://github.com/VoldemortGin/pdfspine"
Repository = "https://github.com/VoldemortGin/pdfspine"
Issues = "https://github.com/VoldemortGin/pdfspine/issues"

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6"]
# Build the documentation site (`mkdocs build`). mkdocstrings introspects the
# INSTALLED `pdfspine`, so the reference auto-renders from docstrings — install
# this extra into an env that also has pdfspine (e.g. the project .venv).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "ruff>=0.6",  # mkdocstrings auto-uses it to wrap long signatures
]
# OCR is now FULLY built in. There is ONE published `pdfspine` wheel and it both
# CONTAINS the pure-Rust PaddleOCR engine (compiled in via the maturin `ocr`
# feature above) AND ships the ~15 MB PP-OCRv4 ONNX models inside the package (at
# `pdfspine/_models`, see `[tool.maturin] include` below). So a bare
# `pip install pdfspine` is full-OCR-capable, offline, with no extra and no
# separate data package.
#
# This `[ocr]` extra is therefore now EMPTY — kept only for backward
# compatibility so `pip install pdfspine[ocr]` keeps resolving (it no longer
# pulls the legacy `pdfspine-ocr-models` data package, which is no longer needed).
#
# Runtime model resolution order (see `python/pdfspine/document.py`
# `_ensure_ocr_models_env` and the Rust `models_dir()` in
# `crates/pdf-ocr/src/paddle/model.rs`):
#   1. `PDFSPINE_OCR_MODELS` env var, if already set (explicit user override);
#   2. else the wheel-bundled `pdfspine/_models` directory (the default);
#   3. else the legacy installed `pdfspine_ocr_models` companion (back-compat);
#   4. else the in-repo `crates/pdf-ocr/models` dev fallback (source checkout);
#   5. else a clear `PdfUnsupportedError`.
ocr = []  # models are bundled into the wheel; this extra is a back-compat no-op.
# 一键装齐全部运行期功能依赖(不含开发用 test/docs)。OCR 引擎与 PP-OCRv4 模型均已编进/
# 打进 wheel,GPU/CPU 由 tract 运行时自适应;故此处也为空,保留名字仅为向后兼容。
all = []

[project.scripts]
pdfspine = "pdfspine.cli:main"

[tool.maturin]
# The Rust crate that builds the extension module.
manifest-path = "crates/py-bindings/Cargo.toml"
# Place the compiled `_core` inside the `pdfspine` package.
module-name = "pdfspine._core"
# Pure-Python sources live here. The pdfspine package ships the native API plus
# the opt-in `pdfspine.fitz` / `pdfspine.pymupdf` compatibility submodules; the
# top-level `fitz` / `pymupdf` names are claimed only via `install_fitz_shim()`.
python-source = "python"
# abi3 wheel covering CPython >= 3.11 (PRD §9.4 / §11.2). The 3.11 floor is
# required by `Pixmap`'s zero-copy buffer protocol — the `bf_getbuffer` /
# `bf_releasebuffer` stable-ABI slots were added in CPython 3.11.
#
# `ocr` (the py-bindings crate's feature) compiles the pure-Rust PaddleOCR engine
# INTO the published wheel. The ~15 MB PP-OCRv4 ONNX models are NOT embedded in
# the binary (that would bloat memory for non-OCR users); instead they are SHIPPED
# in the wheel as data files at `pdfspine/_models` (see `[tool.maturin] include`
# below) and loaded from disk at runtime (see the model resolution order in the
# `ocr` extra below). Net effect: a bare `pip install pdfspine` has BOTH the OCR
# code and the models. `cargo build` / `cargo test` stay lean (paddle-ocr is OFF
# in the workspace default); ONLY maturin (this line) turns OCR on for the wheel.
features = ["pyo3/abi3-py311", "ocr"]
# Ship PEP 561 type information (.pyi stubs + py.typed markers) in sdist + wheel.
# 根 LICENSE 也显式纳入:元数据声明 License-File: LICENSE,PyPI 要求它实际存在于分发包内,
# 否则 sdist 上传报 400(maturin 默认不把根 LICENSE 打进 sdist)。
include = [
    "LICENSE",
    "NOTICE",
    "python/pdfspine/py.typed",
    "python/pdfspine/*.pyi",
    # Ship the AI-facing usage docs inside the package (装后位于
    # site-packages/pdfspine/_llms/)。这些是非 .py 文件,maturin 默认不打包,
    # 需在此显式列出,确保进入 sdist + wheel。
    "python/pdfspine/_llms/llms.txt",
    "python/pdfspine/_llms/docs/*.md",
    # Ship the PP-OCRv5 ONNX weights inside the package (装后位于
    # site-packages/pdfspine/_models/),使 `pip install pdfspine` 直接全功能 OCR、
    # 离线可跑、无需 pdfspine-ocr-models 数据包。这些是 ~28MB 的二进制 .onnx + 字典,
    # maturin 默认不打非 .py 文件,故显式列出,确保进入 sdist + wheel。
    "python/pdfspine/_models/*.onnx",
    "python/pdfspine/_models/ppocr_keys_v5.txt",
    "python/pdfspine/_models/PROVENANCE.md",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
