[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "pdfspine"
# The version is taken from the Rust workspace (Cargo.toml [workspace.package])
# at build time via maturin's `dynamic` metadata — that crate version is the
# single source of truth. Local/dev builds show 0.0.0; tagged CI builds set it
# from the git tag (see .github/workflows/release.yml).
dynamic = ["version"]
description = "Apache-2.0-licensed, pure-Rust reimplementation of PyMuPDF (fitz) with PyO3 bindings."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "pdfspine contributors" }]
keywords = ["pdf", "pymupdf", "fitz", "mupdf", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # NB: no "License ::" trove classifier — the SPDX `license = "Apache-2.0"`
    # expression (PEP 639) is the single source of truth; having both is rejected
    # by recent setuptools/twine (metadata 2.4 license-expression conflict).
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

# The PP-OCRv5 ONNX model weights ship in the shared `ocrspine-models` data
# package (one published copy for the whole spine family), resolved at runtime via
# `ocrspine_models.models_dir()`. It is a hard (base) dependency so a plain
# `pip install pdfspine` is full-OCR-capable offline — no extra, no download.
dependencies = ["ocrspine-models>=0.0.1,<0.1"]

[project.urls]
Homepage = "https://github.com/VoldemortGin/pdfspine"
Repository = "https://github.com/VoldemortGin/pdfspine"
Issues = "https://github.com/VoldemortGin/pdfspine/issues"

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6"]
# Build the documentation site (`mkdocs build`). mkdocstrings introspects the
# INSTALLED `pdfspine`, so the reference auto-renders from docstrings — install
# this extra into an env that also has pdfspine (e.g. the project .venv).
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "ruff>=0.6",  # mkdocstrings auto-uses it to wrap long signatures
]
# OCR is FULLY built in. There is ONE published `pdfspine` wheel and it CONTAINS
# the pure-Rust PaddleOCR engine (compiled in via the maturin `ocr` feature
# below). The ~28 MB PP-OCRv5 ONNX models come from the shared `ocrspine-models`
# data package, declared as a base `dependencies` entry above — so a bare
# `pip install pdfspine` is full-OCR-capable, offline, with no extra needed.
#
# These `[ocr]` / `[all]` extras are therefore EMPTY — kept only for backward
# compatibility so `pip install pdfspine[ocr]` keeps resolving (the models now
# arrive via the base dependency; the legacy `pdfspine-ocr-models` package is no
# longer pulled).
#
# Runtime model resolution order (see `python/pdfspine/document.py`
# `_ensure_ocr_models_env`, which exports both `PDFSPINE_OCR_MODELS` and the
# engine's own `OCRSPINE_MODELS`, read by `ocrspine`'s `models_dir()`):
#   1. `PDFSPINE_OCR_MODELS` env var, if already set (explicit user override);
#   2. else the installed `ocrspine_models` shared data package (the default);
#   3. else the legacy installed `pdfspine_ocr_models` companion (back-compat);
#   4. else the in-crate `ocrspine/models` dev fallback (source checkout);
#   5. else a clear `PdfUnsupportedError`.
ocr = []  # models arrive via the base `ocrspine-models` dependency; back-compat no-op.
all = []  # same: all runtime features are in the base wheel + base dependency.

[project.scripts]
pdfspine = "pdfspine.cli:main"

[tool.maturin]
# The Rust crate that builds the extension module.
manifest-path = "crates/py-bindings/Cargo.toml"
# Place the compiled `_core` inside the `pdfspine` package.
module-name = "pdfspine._core"
# Pure-Python sources live here. The pdfspine package ships the native API plus
# the opt-in `pdfspine.fitz` / `pdfspine.pymupdf` compatibility submodules; the
# top-level `fitz` / `pymupdf` names are claimed only via `install_fitz_shim()`.
python-source = "python"
# abi3 wheel covering CPython >= 3.11 (PRD §9.4 / §11.2). The 3.11 floor is
# required by `Pixmap`'s zero-copy buffer protocol — the `bf_getbuffer` /
# `bf_releasebuffer` stable-ABI slots were added in CPython 3.11.
#
# `ocr` (the py-bindings crate's feature) compiles the pure-Rust PaddleOCR engine
# INTO the published wheel. The ~28 MB PP-OCRv5 ONNX models are NOT embedded in
# the binary, nor shipped inside this wheel; they come from the shared
# `ocrspine-models` data package (declared as a base `dependencies` entry above)
# and are loaded from disk at runtime (see the model resolution order in the `ocr`
# extra above). Net effect: a bare `pip install pdfspine` pulls BOTH the OCR code
# (this wheel) and the models (the data package). `cargo build` / `cargo test`
# stay lean (paddle-ocr is OFF in the workspace default); ONLY maturin (this line)
# turns OCR on for the wheel.
features = ["pyo3/abi3-py311", "ocr"]
# Ship PEP 561 type information (.pyi stubs + py.typed markers) in sdist + wheel.
# 根 LICENSE 也显式纳入:元数据声明 License-File: LICENSE,PyPI 要求它实际存在于分发包内,
# 否则 sdist 上传报 400(maturin 默认不把根 LICENSE 打进 sdist)。
include = [
    "LICENSE",
    "NOTICE",
    # Third-party permissive-license attribution (MIT/Apache/BSD/Zlib/…) for the
    # bundled Rust deps — required to satisfy their attribution terms on redistribution.
    "THIRD-PARTY-NOTICES.md",
    "python/pdfspine/py.typed",
    "python/pdfspine/*.pyi",
    # Ship the AI-facing usage docs inside the package (装后位于
    # site-packages/pdfspine/_llms/)。这些是非 .py 文件,maturin 默认不打包,
    # 需在此显式列出,确保进入 sdist + wheel。
    "python/pdfspine/_llms/llms.txt",
    "python/pdfspine/_llms/docs/*.md",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
