[package]
name = "pdf-fuzz"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# cargo-fuzz target crate. Excluded from the main workspace (see root
# Cargo.toml): it requires the nightly toolchain and `libfuzzer-sys`. Drive it
# with `cargo +nightly fuzz run <target>`. Real targets land in M1
# (fuzz_open / fuzz_lexer / fuzz_xref / per-filter, PRD §9.6).
[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pdf-core = { path = "../crates/pdf-core" }

[[bin]]
name = "fuzz_geom"
path = "fuzz_targets/fuzz_geom.rs"
test = false
doc = false
bench = false

# M1d: never-panic / never-hang / never-OOM contract (PRD §9.6).
[[bin]]
name = "fuzz_open"
path = "fuzz_targets/fuzz_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_repair"
path = "fuzz_targets/fuzz_repair.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
