[package]
name = "pdf-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Unified ergonomic facade and re-exports for oxipdf; the only crate py-bindings touches."

[dependencies]
pdf-core.workspace = true
pdf-text.workspace = true
pdf-edit.workspace = true
pdf-image.workspace = true
pdf-render.workspace = true
bytes.workspace = true

[features]
# Encryption is ON by default so the shipped wheel can open encrypted PDFs from
# Python (PRD §8.4 / M1f). Threads through to `pdf-core`'s `encryption` feature.
default = ["encryption"]
encryption = ["pdf-core/encryption"]

[dev-dependencies]
# Encrypted-document integration fixtures are generated via `pdf-crypto`'s
# test-support encrypt path (no external files) — only built under `encryption`.
pdf-crypto = { workspace = true, features = ["test-support"] }
